[package]
name = "rusted-pile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.38"
insta = { version = "1.28.0", features = ["yaml"] }
serde = { version = "1.0.152", features = ["derive"] }
