[package]
name = "rusted-pile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12"
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.38"
anyhow = "1.0.69"
singleton-manager = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

inkwell = { version = "0.2", features = ["llvm15-0"] }
llvm-sys-150 = { package = "llvm-sys", version = "150.1.0", features = ["prefer-dynamic"] }
lazy_static = "1.4"
once_cell = "1.17"
